fixed a bug where if the message was too long, the preview go over the next chat preview

--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ body>main {
     position: absolute;
     height: 95vh;
     /* width of 80% before complete */
-    width: 80%;
+    width: 95%;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -128,6 +128,7 @@ a,
     width: 100%;
     align-items: flex-start;
     position: relative;
+    overflow: hidden;
     border-bottom: 1px solid #eaeaea;
 }
 
